# scenetalk

./: .env.example  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/scenetalk/: __init__.py  cli.py  models.py  report.py  simulator.py
src/scenetalk/accessibility/: __init__.py  alt_text.py  detailed.py  navigation.py
src/scenetalk/describer/: __init__.py  objects.py  scene.py  spatial.py
tests/: test_accessibility.py  test_benchmark.py  test_core.py  test_integration.py  test_objects.py  test_scene.py  test_simulator.py  test_spatial.py
